2005-05-25 Bert Vincent <bert@bic.mni.mcgill.ca>
	* Minor build tweaks.
	
2005-03-17 Bert Vincent <bert@bic.mni.mcgill.ca>
	* Remove dependencies on volume_io, since it is no longer used in
	any way.
	* Add -Wall to AM_CFLAGS and get rid of all resulting warnings
	* Fix all of Christopher Bailey's bugs:  Draw ROI circle correctly,
	fix color bar, and avoid compilation problem when ARGV_VERINFO is
	not defined, as in MINC 1.2 and earlier.
	
2005-03-16 Bert Vincent <bert@bic.mni.mcgill.ca>
	* More autoconf fixes/changes
	* Even more porting to X - avoid translation of Y coordinates, use
	fixed window sizes.

2005-03-10 Bert Vincent <bert@bic.mni.mcgill.ca>
	* Complete rewrite into Xlib
	* Started bringing in Gabriel's old interpolation code from his
	xpostf.
	
2005-03-04 Bert Vincent <bert@bic.mni.mcgill.ca>
	* Added epm-header
	* Added man page
	* Hacked configure.ac and Makefile.am (in)appropriately.
	
2005-02-11 Bert Vincent <bert@bic.mni.mcgill.ca>
	* Checked hacked-up version of postf sources into CVS